lab5/out
make[1]: Entering directory '/home/elijah/etc/programs/CMPS104a/cmps104a/lab5'
g++ -std=gnu++17 -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c 3ac.cpp
3ac.cpp: In function ‘ac3* push_string(astree*, symbol_table*, reg*)’:
3ac.cpp:536:15: error: expected unqualified-id before ‘->’ token
  536 |     all_tables->all_strings->push_back(expr->lexinfo);
      |               ^~
make[1]: *** [Makefile:55: 3ac.o] Error 1
make[1]: Leaving directory '/home/elijah/etc/programs/CMPS104a/cmps104a/lab5'
